--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
     <div class="form-section">
       <input type="text" id="description" placeholder="Description" />
       <input type="number" id="amount" placeholder="Total Amount" />
-      <input type="date" id="date" />
+      Date <input type="date" id="date" />
       <select id="location">
         <option value="">Select Location</option>
         <option value="Prayagraj">Prayagraj</option>
         <option value="Varanasi">Varanasi</option>
         <option value="Ayodhya">Ayodhya</option>
+        <option value="Ayodhya">Travel</option>
       </select>
       <button onclick="addExpense()">Add</button>
     </div>
