--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="form-section">
       <input type="text" id="description" placeholder="Description" />
       <input type="number" id="amount" placeholder="Total Amount" />
-      Date <input type="date" id="date" />
+      <input  name="Date" type="date" id="date" />
       <select id="location">
         <option value="">Select Location</option>
         <option value="Prayagraj">Prayagraj</option>
