--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <div class="form-section">
       <input type="text" id="description" placeholder="Description" />
       <input type="number" id="amount" placeholder="Total Amount" />
-      <input  name="Date" type="date" id="date" />
+      <input type="date" id="date" />
       <select id="location">
         <option value="">Select Location</option>
         <option value="Prayagraj">Prayagraj</option>
         <option value="Varanasi">Varanasi</option>
         <option value="Ayodhya">Ayodhya</option>
-        <option value="Ayodhya">Travel</option>
+        <option value="Train">Train</option>
       </select>
       <button onclick="addExpense()">Add</button>
     </div>
@@ -53,7 +53,7 @@
         <thead>
           <tr>
             <th>Date</th>
-            <th>Location</th>
+            <th>Location(s)</th>
             <th>Per Person</th>
             <th>Total Group</th>
             <th>Actions</th>
